--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header>
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Movies</a></li>
+                <li><a href="#movie">Movies</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <section class="HomePage">
+    <section class="HomePage" id="home">
         <div class="main">
             <div class="mLable">
                 <h3><button>New</button>Best Movie in 2022</h3>
@@ -76,6 +76,60 @@
         </div>
     </section>
 
+    <section class="movies" id="movie">
+        <div>
+            <table id="list">
+                <tr>
+                    <td id="Avenger">
+                        <a href="">
+                            <img src="img/m6aqgnw2nxrb1.jpg" alt="">
+                            <h2>Avengers Secret Wars</h2>
+                            <h3>2hr 10min . <span>Action</span></h3>
+                        </a>
+                    </td>
+                    <td>
+                        <img src="img/MV5BMTc5MDE2ODcwNV5BMl5BanBnXkFtZTgwMzI2NzQ2NzM@._V1_.jpg" alt="">
+                        <h2>Avengers: Endgame</h2>
+                        <h3>2hr 10min . <span>Action</span></h3>
+                    </td>
+                    <td>
+                        <img src="img/p16345736_v_v9_ad.jpg" alt="">
+                        <h2>K.G.F: Chapter 1 </h2>
+                        <h3>2hr 10min . <span>Action</span></h3>
+                    </td>
+                    <td>
+                        <img src="img/f5a21f64af7359f7aaa7c29dee8a12a97630e707cdbf71e0ae6b063322fb8575.jpg" alt="">
+                        <h2>K.G.F: Chapter 2 </h2>
+                        <h3>2hr 10min . <span>Action</span></h3>
+                    </td>
+                </tr>
+    
+                <tr>
+                    <td>
+                        <img src="img/6ca8614a37e195dbe0c4b4672411b0c4683577e31fd27b665061e99d912c0fdf.jpg" alt="">
+                        <h2>Maari </h2>
+                        <h3>2hr 10min . <span>Action</span></h3>
+                    </td>
+                    <td>
+                        <img src="img/MV5BOTRkYWY3ZGEtYzU5My00ZGY4LThhYjEtNTYyNzFhMDM4MTUyXkEyXkFqcGdeQXVyMTA3MDk2NDg2._V1_.jpg" alt="">
+                        <h2>Master </h2>
+                        <h3>2hr 10min . <span>Action</span></h3>
+                    </td>
+                    <td>
+                        <img src="img/VIJAY-MOVIE.jpg" alt="">
+                        <h2>Varisu</h2>
+                        <h3>2hr 10min . <span>Action</span></h3>
+                    </td>
+                    <td>
+                        <img src="img/chennai.jpg" alt="">
+                        <h2>Chennai Express</h2>
+                        <h3>2hr 10min . <span>Action</span></h3>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </section>
     <script src="js/js.js"></script>
+    <script src="js/onlcick.js"></script>
 </body>
 </html>
